# task

./: README.md  comprehensive_analysis.ipynb  data.md  merge_tables.ipynb  notes.md  pyproject.toml
.github/: copilot-instructions.md
api/: main.py  pyproject.toml
api/.github/: copilot-instructions.md
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/: rma_returns.csv  sites.csv  skus.csv  suppliers.csv
data/rma/: anomalies.csv  sku_health.csv  weekly_timeseries_complete.csv
models/: lead_time_hist_gradient_boosting.joblib
research/: Incoterm.ipynb  abnormal_shippement_times.ipynb  delayed_shippment.ipynb  forecast.ipynb  forecast_second_try.ipynb  lead_time_model.ipynb  lead_time_validation.ipynb  rma_analysis.ipynb  shipments.ipynb  shippment_delay.ipynb  sku.ipynb  transits.ipynb
research/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
research/catboost_info/learn/: events.out.tfevents
research/catboost_info/test/: events.out.tfevents
rma_app/: package-lock.json  package.json  papaparse.d.ts
rma_app/.github/: copilot-instructions.md
rma_app/app/: page.tsx
rma_app/app/dashboard/: page.tsx
rma_app/components/: app-sidebar.tsx  data-loader.tsx  data-table.tsx
rma_app/components/loaders/: anomalies-data-loader.tsx  rma-data-loader.tsx  sites-data-loader.tsx  sku-health-data-loader.tsx
rma_app/lib/: types.ts
rma_app/public/: sites_enriched.csv
(+10 files in other folders)
