[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
    "uvicorn>=0.38.0",
    "pandas>=2.2.2",
    "joblib>=1.4.2",
    "scikit-learn>=1.7.2",
]
